[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Shai-Huluddu.png" type="Texture" id=1]
[ext_resource path="res://ShaiUludd.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 120, 156, 0, 0, 0, 0, 168, 118, 0, 0, 0, 0, 170, 47, 30.9182, 3.81183, -30.9182, -3.81183, 111, -15, 36.1964, -2.98547, -36.1964, 2.98547, -35, -8, 26.3671, -1.81842, -26.3671, 1.81842, -52.546, -8.0116, 23.7181, -20.1886, -23.7181, 20.1886, -132, 36, 0, 0, 0, 0, -125, 131, 0, 0, 0, 0, -98, 180, 0, 0, 0, 0, 120, 156 )
}

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15.8606, 19.2908 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 54.4347, 10.0782 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 168.5, 56.5 )

[node name="ShaiUludd" type="Path2D"]
z_index = -2
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( 120, 156 )
rotation = -0.669639

[node name="AnimatedSprite" type="AnimatedSprite" parent="PathFollow2D"]
scale = Vector2( -1, -1 )
frames = SubResource( 4 )
animation = "Idle"
frame = 1
playing = true

[node name="Hitbox" type="Area2D" parent="PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Hitbox"]
position = Vector2( 43.0082, -6.2887 )
shape = SubResource( 8 )

[node name="BounceBox" type="Area2D" parent="PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/BounceBox"]
position = Vector2( -1.53542, 5.16164 )
rotation = 0.189806
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8.5, -18.5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="PathFollow2D/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PathFollow2D/BounceBox" to="." method="_on_BounceBox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
